# Task-Journaling-Desktop

./: README.md
backend/: Cargo.toml  Readme.MD  conf.toml  journal.md
backend/src/: main.rs  utils.rs
backend/src/handlers/: mod.rs
backend/src/types/: mod.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: main.css
frontend/src/: main.rs  utils.rs
frontend/src/components/: mod.rs
frontend/src/pages/: mod.rs
frontend/src/types/: mod.rs
