[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde_json = "1"
rust-crypto = "=0.2.36"
uuid = { version = "1.17.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
actix-files = "0.6.6"
sysinfo = "0.36.0"
whoami = "1.6.0"
actix-cors = "0.7.1"
toml = "0.9.2"
aes-gcm = "0.10.3"
base64 = "0.22.1"